--- a/views/home.html
+++ b/views/home.html
@@ -999,12 +999,6 @@
 
     <!-- Contact start -->
     <section class="contact-area" id="contact">
-        <div class="shep-right">
-            <img src="images/shep-right.png" alt="">
-        </div>
-        <div class="shep-left">
-            <img src="images/shep-left.png" alt="">
-        </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -1083,22 +1077,9 @@
     <!-- Newsletter start -->
     <footer class="footer-area over-layer-white">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section-title">
-                        <h2>subscribe to get <span>newsletter</span></h2>
-                    </div>
-                </div>
-            </div>
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="footer-col">
-                        <div class="input-group">
-                          <input type="text" class="form-control" placeholder="Email Address" aria-label="">
-                          <div class="input-group-append">
-                            <button class="btn btn-default btn-style btn-color" type="button">Subscribe</button>
-                          </div>
-                        </div>
                         <ul>
                             <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="0s"><a href="#"><img src="images/icons/1.png" alt=""></a></li>
                             <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><img src="images/icons/2.png" alt=""></a></li>
@@ -1135,7 +1116,7 @@
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/jquery.countup.min.js"></script>
     <script src="js/jarallax.min.js"></script>
-    <script src="js/dyscrollup.js"></script>
+    <!-- <script src="js/dyscrollup.js"></script> -->
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/jquery.mb.YTPlayer.min.js"></script>
