--- a/public/css/style.css
+++ b/public/css/style.css
@@ -642,7 +642,7 @@ input:-moz-placeholder {
     z-index: 99;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.3);
 }
 .slider-area .hero-content {
     z-index: 999 !important;
@@ -898,8 +898,8 @@ input:-moz-placeholder {
     09. Pricing CSS
 *****-----*****-----*****-----*****/
 .pricing-table {
-    background: #EFF7FE;
-    padding: 150px 0 120px;
+    background: #5f9ea0;
+    padding: 90px 0 120px;
     overflow: hidden;
 }
 .pricing-table .default-title h2 {
@@ -999,7 +999,7 @@ input:-moz-placeholder {
     10. Ticket CSS
 *****-----*****-----*****-----*****/
 .ticket-area {
-    padding: 36px 0;
+    padding: 85px 0;
     position: relative;
 }
 .ticket-area.over-layer-black:before {
@@ -1034,7 +1034,7 @@ input:-moz-placeholder {
     11. Schedule CSS
 *****-----*****-----*****-----*****/
 .schedule-area {
-    padding: 50px 0;
+    padding: 85px 0;
     position: relative;
 }
 .tab-panels ul {
@@ -1103,8 +1103,8 @@ input:-moz-placeholder {
     12. Venue CSS
 *****-----*****-----*****-----*****/
 .venue-area {
-    padding: 50px 0 50px;
-    background: #eff7fe;
+    padding: 85px 0 50px;
+    background: #b7c1c0;
     overflow-x: hidden;
 }
 .venue-col {
@@ -1583,17 +1583,17 @@ input:-moz-placeholder {
     17. Contact CSS
 *****-----*****-----*****-----*****/
 .contact-area {
-    padding: 150px 0 120px;
+    padding: 90px 0 0;
     position: relative;
 }
 .contact-info-box {
     margin-bottom: 30px;
 }
 .info-box {
-    text-align: center;
+    /* text-align: center; */
     position: relative;
     padding: 40px 50px;
-    background: #eff7fe;
+    background: #e3e5e6;
 }
 .info-box:before {
     content: "";
