--- a/views/home.html
+++ b/views/home.html
@@ -77,7 +77,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link page-scroll active" href="#page-top">Home</a>
+                            <a class="nav-link page-scroll active" href="#page-top" style="color:#000000">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="#about">About</a>
@@ -86,10 +86,10 @@
                             <a class="nav-link page-scroll" href="#callforpapers">Call for Papers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#registerationfee">Registeration Fee</a>
+                            <a class="nav-link page-scroll" href="#registerationfee">Registeration</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#schedules">Schedules</a>
+                            <a class="nav-link page-scroll" href="#publication">Publication</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="#venue">Venue</a>
@@ -145,7 +145,7 @@
                 <div class="col-xl-6 col-lg-12">
                     <div class="about-col">
                         <h2>about our <span>Conference</span></h2>
-                        <p>Greetings and best wishes from International Conference on Science, Technology, Engineering and management, at KIT-Kalaignarkarunanidhi institute of technology Coimbatore, India. We are extremely glad to write to you that we are organizing the Third International Conference on Science, Technology, Engineering and management (ICSTEM’19) on 22 & 23 March 2019 at KIT-Kalaignarkarunanidhi Institute of Technology, Coimbatore, India.</p>
+                        <p>Greetings and best wishes from International Conference on Science, Technology, Engineering and management, at KIT-Kalaignarkarunanidhi institute of technology Coimbatore, India. </p><br>
                         <p>International Conference on Science, Technology, Engineering and Management (ICSTEM’19) aims at bringing together leading academicians, scientists and researchers to exchange and share their experiences, new ideas, views, thoughts and research results in various aspects of Science, Technology, Engineering and Management.</p>
                         <h3 class="cd-headline clip">
                             <span class="cd-words-wrapper">
@@ -158,8 +158,7 @@
                 </div>
                 <div class="col-xl-6 col-lg-12">
                     <div class="about-col"> 
-                        <h2>Sight Seeing  <span>Programmes</span></h2>
-                        <p> There are a large number of tourist spots in Coimbatore. The most important ones statue of Adiyogi at Isha yoga center, Ooty, Marudhamalai Temple of Lord Muruga, Siruvani Water Falls, Amusement parks are Kovai kondattam and Blackthunder.</p>
+                        <p>We are extremely glad to write to you that we are organizing the Third International Conference on Science, Technology, Engineering and management (ICSTEM’19) on 22 & 23 March 2019 at KIT-Kalaignarkarunanidhi Institute of Technology, Coimbatore, India.</p>
                         <div class="history-carousel">
                             <div class="item">
                                 <img src="images/slider/s1.jpg" alt="">
@@ -525,7 +524,7 @@
     </section>
 
     <!-- Schedules Start -->
-    <section class="schedule-area" id="schedules">
+    <section class="schedule-area" id="publication">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -637,7 +636,7 @@
                         <div class="venue-details" style="text-align: center;">
                             <i class="fas fa-file-upload" style="font-size:50px"></i>
                             <p>Abstract Submission</p>
-                            <p>[30th Dec 2018]</p>
+                            <p>[<span style="color:blueviolet">30th Dec 2018</span>]</p>
                         </div>
                     </div>
                 </div>
@@ -646,7 +645,7 @@
                         <div class="venue-details" style="text-align: center;">
                             <i class="fas fa-concierge-bell" style="font-size:50px"></i>
                             <p>Intimation</p>
-                            <p>[10th Jan 2019]</p>
+                            <p>[<span style="color:blueviolet">10th Jan 2019</span>]</p>
                         </div>
                     </div>
                 </div>
@@ -655,7 +654,7 @@
                         <div class="venue-details" style="text-align: center;"> 
                             <i class="fas fa-window-restore" style="font-size:50px"></i>
                             <p>Submission of Full Paper</p>
-                            <p>[5th Feb 2019]</p>
+                            <p>[<span style="color:blueviolet">5th Feb 2019</span>]</p>
                         </div>
                     </div>
                 </div>
@@ -666,7 +665,7 @@
                         <div class="venue-details" style="text-align: center;">
                             <i class="fas fa-bell" style="font-size:50px"></i>
                             <p>Final Notification</p>
-                            <p>[15th Feb 2019]</p>
+                            <p>[<span style="color:blueviolet">15th Feb 2019</span>]</p>
                         </div>
                     </div>
                 </div>
@@ -675,7 +674,7 @@
                         <div class="venue-details" style="text-align: center;">
                             <i class="fas fa-file-video" style="font-size:50px"></i>
                             <p>Final Camera Ready Paper</p>
-                            <p>[20th Feb 2019]</p>
+                            <p>[<span style="color:blueviolet">20th Feb 2019</span>]</p>
                         </div>
                     </div>
                 </div>
@@ -684,7 +683,27 @@
                         <div class="venue-details" style="text-align: center;">
                             <i class="fas fa-user-edit" style="font-size:50px"></i>
                             <p>Last Date For Registration</p>
-                            <p>[26th Feb 2019]</p>
+                            <p>[<span style="color:blueviolet">26th Feb 2019</span>]</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+                <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-title">
+                        <h2><span>Sight Seeing</span> Programmes</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <div class="venue-col wow fadeInRight" data-wow-duration="1s" data-wow-delay="0s">
+                        <div class="venue-details">
+                            <ul style="text-align:center"> 
+                              <p>There are a large number of tourist spots in Coimbatore. The most important ones statue of Adiyogi at Isha yoga center, Ooty, Marudhamalai Temple of Lord Muruga, Siruvani Water Falls, Amusement parks are Kovai kondattam and Blackthunder.</p>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -1084,12 +1103,12 @@
                 <div class="col-lg-6 col-md-10">
                     <div class="footer-col">
                         <ul>
-                            <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="0s"><a href="#"><img src="images/icons/1.png" alt=""></a></li>
-                            <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><img src="images/icons/2.png" alt=""></a></li>
+                            <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="0s"><a href="https://www.facebook.com/kitcbe/"><img src="images/icons/1.png" alt=""></a></li>
+                            <!-- <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><img src="images/icons/2.png" alt=""></a></li>
                             <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="0.4s"><a href="#"><img src="images/icons/3.png" alt=""></a></li>
                             <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="0.6s"><a href="#"><img src="images/icons/4.png" alt=""></a></li>
                             <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="0.8s"><a href="#"><img src="images/icons/5.png" alt=""></a></li>
-                            <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="1s"><a href="#"><img src="images/icons/6.png" alt=""></a></li>
+                            <li class="wow zoomIn" data-wow-duration="1s" data-wow-delay="1s"><a href="#"><img src="images/icons/6.png" alt=""></a></li> -->
                         </ul>
                     </div>
                 </div>
