registration link added

--- a/views/home.html
+++ b/views/home.html
@@ -86,7 +86,7 @@
                             <a class="nav-link page-scroll" href="#callforpapers">Call for Papers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#registerationfee">Registeration</a>
+                            <a class="nav-link page-scroll" href="#registrationfee">Registration</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="#publication">Publication</a>
@@ -121,7 +121,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="hero-col">
-                                    <h2 style="font-size:50px">KIT-ICSTEM <span style="color:#000000">conference 2019</span></h2>
+                                    <h2 style="font-size:50px">KIT-ICSTEM <span style="color:#ff0a0a">conference 2019</span></h2>
                                     <h4 style="color:#000000">March 22 & 23, 2019</h4>
                                     <div class='countdown' data-date="2018-12-01"></div>
                                 </div>
@@ -467,19 +467,20 @@
     </section>
 
     <!-- Ticket Start -->
-    <section class="ticket-area jarallax over-layer-black" id="registerationfee">
+    <section class="ticket-area jarallax over-layer-black" id="registrationfee">
         <img class="jarallax-img" src="images/bg/3.jpg" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h2>Registration <span>Fee</span></h2>
+                        <h2>Registration</h2>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-12">
                     <div class="ticket-col">
+                        <p>click here to register&nbsp;&nbsp;<span><a href="https://easychair.org/conferences/?conf=icstem19"  style="color:#14bbf8;font-size: 20px;"><i class="fas fa-hand-point-right"></i>&nbsp;Easy Chair</a></span></p>
                         <p>Please note that due to budgetary constraints, we are unable to provide any financial assistance. The registration fee for the conference is fixed at an affordable rate</p>         
                                 <table class="table table-bordered">
                                   <thead style="background-color:cadetblue"> 
@@ -1115,7 +1116,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>©2018. Designed by <a href="" target="_blank">Cubernest.</a> All Rights Reserved.</p>
+            <p>©2019&nbsp;&nbsp;<a href="" target="_blank">KIT-ICSTEM.</a> All Rights Reserved.</p>
         </div>
     </footer>
 
