--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1993,3 +1993,17 @@ input:-moz-placeholder {
     font-size: 36px;
     line-height: 1.5;
 }
+
+/* blink */
+@-webkit-keyframes blinker {
+    from {opacity: 1.0;}
+    to {opacity: 0.0;}
+  }
+  .blink{
+      text-decoration: blink;
+      -webkit-animation-name: blinker;
+      -webkit-animation-duration: 0.6s;
+      -webkit-animation-iteration-count:infinite;
+      -webkit-animation-timing-function:ease-in-out;
+      -webkit-animation-direction: alternate;
+  }
