--- a/views/home.html
+++ b/views/home.html
@@ -480,7 +480,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-12">
                     <div class="ticket-col">
-                        <p>click here to register&nbsp;&nbsp;<span><a href="https://easychair.org/conferences/?conf=icstem19"  style="color:#14bbf8;font-size: 20px;"><i class="fas fa-hand-point-right"></i>&nbsp;Easy Chair</a></span></p>
+                        <a href="https://easychair.org/conferences/?conf=icstem19"  > <p class="blink" style="color:#14bbf8;font-size: 20px;">click here to register&nbsp;&nbsp;<span><i class="fas fa-hand-point-right"></i>&nbsp;Easy Chair</span></p></a>
                         <p>Please note that due to budgetary constraints, we are unable to provide any financial assistance. The registration fee for the conference is fixed at an affordable rate</p>         
                                 <table class="table table-bordered">
                                   <thead style="background-color:cadetblue"> 
@@ -637,7 +637,7 @@
                         <div class="venue-details" style="text-align: center;">
                             <i class="fas fa-file-upload" style="font-size:50px"></i>
                             <p>Abstract Submission</p>
-                            <p>[<span style="color:blueviolet">30th Dec 2018</span>]</p>
+                            <p>[<span style="color:blueviolet">20th Jan 2018</span>]</p>
                         </div>
                     </div>
                 </div>
@@ -646,7 +646,7 @@
                         <div class="venue-details" style="text-align: center;">
                             <i class="fas fa-concierge-bell" style="font-size:50px"></i>
                             <p>Intimation</p>
-                            <p>[<span style="color:blueviolet">10th Jan 2019</span>]</p>
+                            <p>[<span style="color:blueviolet">30th Jan 2019</span>]</p>
                         </div>
                     </div>
                 </div>
@@ -655,7 +655,7 @@
                         <div class="venue-details" style="text-align: center;"> 
                             <i class="fas fa-window-restore" style="font-size:50px"></i>
                             <p>Submission of Full Paper</p>
-                            <p>[<span style="color:blueviolet">5th Feb 2019</span>]</p>
+                            <p>[<span style="color:blueviolet">15th Feb 2019</span>]</p>
                         </div>
                     </div>
                 </div>
@@ -666,7 +666,7 @@
                         <div class="venue-details" style="text-align: center;">
                             <i class="fas fa-bell" style="font-size:50px"></i>
                             <p>Final Notification</p>
-                            <p>[<span style="color:blueviolet">15th Feb 2019</span>]</p>
+                            <p>[<span style="color:blueviolet">20th Feb 2019</span>]</p>
                         </div>
                     </div>
                 </div>
@@ -675,7 +675,7 @@
                         <div class="venue-details" style="text-align: center;">
                             <i class="fas fa-file-video" style="font-size:50px"></i>
                             <p>Final Camera Ready Paper</p>
-                            <p>[<span style="color:blueviolet">20th Feb 2019</span>]</p>
+                            <p>[<span style="color:blueviolet">25th Feb 2019</span>]</p>
                         </div>
                     </div>
                 </div>
@@ -684,7 +684,7 @@
                         <div class="venue-details" style="text-align: center;">
                             <i class="fas fa-user-edit" style="font-size:50px"></i>
                             <p>Last Date For Registration</p>
-                            <p>[<span style="color:blueviolet">26th Feb 2019</span>]</p>
+                            <p>[<span style="color:blueviolet">3rd Mar 2019</span>]</p>
                         </div>
                     </div>
                 </div>
