--- a/views/home.html
+++ b/views/home.html
@@ -125,6 +125,11 @@
                                     <h4 style="color:#000000">March 22 & 23, 2019</h4>
                                     <div class='countdown' data-date="2018-12-01"></div>
                                 </div>
+                                <div class="panel panel-default" style="background-color:#14BBF8;margin-top: 80px;border-radius: 10px;"> 
+                                    <div class="panel-body"><marquee scrolldelay="100">                          
+                                          <p>Submission of Full Paper[<span style="color:blueviolet">15th Feb 2019</span>]&nbsp;&nbsp;Final Notification[<span style="color:blueviolet">20th Feb 2019</span>]&nbsp;&nbsp;Final Camera Ready Paper[<span style="color:blueviolet">25th Feb 2019</span>]&nbsp;&nbsp;Last Date For Registration[<span style="color:blueviolet">3rd Mar 2019</span>]</p>
+                                        </marquee></div>
+                                  </div>
                             </div>
                         </div>
                     </div>
@@ -611,19 +616,10 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <div class="venue-col wow fadeInRight" data-wow-duration="1s" data-wow-delay="0s">
-                        <div class="venue-details" style="text-align: center;">
-                            <i class="fas fa-file-upload" style="font-size:50px"></i>
+                        <div class="" style="text-align: center;">
+                            <!-- <i class="fas fa-file-upload" style="font-size:50px"></i>
                             <p>Abstract Submission</p>
-                            <p>[<span style="color:blueviolet">20th Jan 2018</span>]</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12">
-                    <div class="venue-col wow fadeInRight" data-wow-duration="1s" data-wow-delay="0s">
-                        <div class="venue-details" style="text-align: center;">
-                            <i class="fas fa-concierge-bell" style="font-size:50px"></i>
-                            <p>Intimation</p>
-                            <p>[<span style="color:blueviolet">30th Jan 2019</span>]</p>
+                            <p>[<span style="color:blueviolet">20th Jan 2018</span>]</p> -->
                         </div>
                     </div>
                 </div>
@@ -633,6 +629,15 @@
                             <i class="fas fa-window-restore" style="font-size:50px"></i>
                             <p>Submission of Full Paper</p>
                             <p>[<span style="color:blueviolet">15th Feb 2019</span>]</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="venue-col wow fadeInRight" data-wow-duration="1s" data-wow-delay="0s">
+                        <div class="" style="text-align: center;">
+                            <!-- <i class="fas fa-concierge-bell" style="font-size:50px"></i>
+                            <p>Intimation</p>
+                            <p>[<span style="color:blueviolet">30th Jan 2019</span>]</p> -->
                         </div>
                     </div>
                 </div>
